# p2c-async

./: .gitignore  ANYBLOB_SCHEDULING.md  CMakeLists.txt  ParquetFiles.md  README.md  StringHeap.md  anyblob_sync_test.cc  benchmarking.py  config_example.json  config_list.json  duckdb_bench.sh  main.cc  p2c_bench.py  requirements.txt  result.hpp
Docs/: PARAMETERS.md
data-generator/: .clangd  Makefile  PARQUET_README.md  all.cpp  csv.hpp  generate-data.sh  parquet-generator.cpp  pqlite-reader.hpp  table-reader.hpp  tpch.hpp
data-generator/tpch-dbgen/: makefile
include/IR/: Builder.h  ColTypes.h  Pipeline.h  Types.h
include/internal/: CloudManager.h  Compiler.h  Config.h  Database.h  ParquetMetadata.h  ParquetTable.h  QueryScheduler.h  Schema.h  Table.h  utils.h
include/operators/: Aggregation.h  Driver.h  InnerJoin.h  Scan.h
include/provided/: debug.hpp  hash.hpp  io.hpp  perfevent.hpp  tpch.hpp  types.hpp
include/runtime/: ArrowBlockPoolWrapper.h  BlockPool.h  Murmur.h  Runtime.h  ThreadLocalContext.h  tuplebuffer.h
lib/: CMakeLists.txt  Driver.cc
lib/IR/: Builder.cc  CMakeLists.txt  Pipeline.cc  Types.cc
lib/internal/: CMakeLists.txt  CloudManager.cc  Database.cc  ParquetTable.cc  QueryScheduler.cc  Schema.cc
lib/runtime/: ArrowBlockPoolWrapper.cc  BlockPool.cc  CMakeLists.txt  Runtime.cc
queries/: includes.hpp
queries/definitions/tpch-q01/: result.hpp
queries/definitions/tpch-q02/: definition.sql
queries/definitions/tpch-q03/: definition.sql
queries/definitions/tpch-q04/: definition.sql
queries/definitions/tpch-q05/: definition.sql  result.hpp
queries/definitions/tpch-q06/: definition.sql  result.hpp
queries/definitions/tpch-q07/: definition.sql  result.hpp
queries/definitions/tpch-q08/: definition.sql  result.hpp
queries/definitions/tpch-q10/: definition.sql
queries/definitions/tpch-q12/: definition.sql  result.hpp
queries/definitions/tpch-q14/: definition.sql  result.hpp
queries/definitions/tpch-q17/: definition.sql  result.hpp
queries/definitions/tpch-q18/: definition.sql
queries/definitions/tpch-q19/: result.hpp
queries/definitions/tpch-q20/: definition.sql
queries/definitions/tpch-q21/: definition.sql
tools/qaas/: CMakeLists.txt  EarlyExecution.hpp  Expression.hpp  GroupBy.hpp  IU.hpp  Join.hpp  Map.hpp  Operator.hpp  Select.hpp  Sort.hpp  TableScan.hpp  UmbraWebinterfaceConnector.hpp  planConverter.cpp  resultMaterializer.cpp
unittests/: hll_test.cc  load_test.cc  tpch_test.cc
